# ChangeLog for dev-util/tinyxml
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  02 Mar 2009; Tomas Chvatal <scarabeus@gentoo.org> tinyxml-9999.ebuild:
  Live ebuilds dont have keywords.

  10 Dec 2008; Tiago Cunha <tcunha@gentoo.org> tinyxml-9999.ebuild:
  Declare myconf as local to avoid polluting global scope

  10 Oct 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  +tinyxml-2.5.3.ebuild:
  Add ebuild for latest version (untested)

  17 Apr 2008; Thomas Anderson (gentoofan23) <gentoofan23@gmail.com>
  tinyxml-9999.ebuild:
  Fix RDEPEND containing unneeded DEPEND values, see PMS section 8.4 for details

  03 Apr 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  tinyxml-9999.ebuild:
  Added amd64 keyword, cosmetics

  06 Mar 2007; Patrick Zimmermann (moHiJ) <patrick@zakweb.de>
  +tinyxml-9999.ebuild, +metadata.xml:
  New ebuild for bug 90041
