@@ -1,5 +1,3 @@
-DIST tinyxml_2_5_3.tar.gz 196129 RMD160 eff79d241f6155d8415521a38c484fc72980c29f SHA1 476f56caad21cd61ac7cc6fd40b503f20e3a66a9 SHA256 c0b88bc5413e41ed566dab9f7a192e0e9e6060cc13ebdeab4766168559620d2b
-EBUILD tinyxml-2.5.3.ebuild 1461 RMD160 ecfd5ef63e349fbc4e6000d23a418a09f024cb91 SHA1 d1c2b1fcc4d04ef31fb94e427a5433da098c9973 SHA256 9821ebc319ec21433a558b02cdd547ac8513fbff67c6d859b2ded11680afab8d
 EBUILD tinyxml-9999.ebuild 1091 RMD160 892413c8834870a5689068a84f29db7823eaa4c8 SHA1 059acaf99d8aa92416ee28b614721a49b6a00107 SHA256 cf5e5984eb97bf7b233c95894196bf22dd79cb57f27f1f5c92f950d098f02d77
-MISC ChangeLog 900 RMD160 3b5f2c0efe03c7c742627560c166ea65eb42aab3 SHA1 46ace91ec206a290dec7cb45e98834bb5c4c27a8 SHA256 8acb46cfce47b6cd0b8fee6643e45443b466b3e7c7b710e87b3dba0d58526483
+MISC ChangeLog 993 RMD160 7ccb7f05d68b4383cbe7cceebb7d7142adf4e24a SHA1 cd0924ba610127de576ff60aeaa67f436500e196 SHA256 8a5adcc91e0dc25efc5ddecc359bed08b2a43726594470fbafda8c9c418542b2
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
