@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  10 Sep 2009; Justin Lecher (jlec) <jlec@j-schmitz.net>
+  -tinyxml-2.5.3.ebuild:
+  in tree
+
   02 Mar 2009; Tomas Chvatal <scarabeus@gentoo.org> tinyxml-9999.ebuild:
   Live ebuilds dont have keywords.
 
